# ZKBOOpp

./: CMakeLists.txt  README.md
MPC_SHA1/: CMakeLists.txt  MPC_SHA1.c  MPC_SHA1_VERIFIER.c
MPC_SHA256/: CMakeLists.txt  MPC_SHA256.c  shared.h  time_utils.h
inc/: Matrix.h  MpcVariable.h  mpc_core.h  mpc_types.h  sha256.h  sha3.h  test_utility.h  xorshift128plus.h  zkbpp_core.h
inc/chacha/: chacha.h
inc/trivium/: trivium.h
src/: MpcVariable.cpp  mpc_core.cpp  mpc_types.cpp  test_utility.cpp  zkbpp_core.cpp
test/: Matrix_test.cpp  MpcVariable_test.cpp  chacha_test.cpp  mpc_core_test.cpp  sha256_test.cpp  sha3_test.cpp  trivium_test.cpp  xorshift128plus_test.cpp
